# twink

./: CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE.md  README.md  TODO.md  build.rs
src/: app.rs  lib.rs  main.rs  types.rs  utils.rs  windowing.rs
src/components/: window.rs
src/components/imp/: window.rs
src/resources/: resources.gresource.xml
src/resources/ui/: mainwindow.ui  window.blp
src/ui/: mod.rs  window.rs
src/uisrc/: imp.rs  mod.rs
