[package]
name = "twink"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
authors = ["Clover Johnson <clover.johnson@mailfence.com>"]

[dependencies]
anyhow = "1.0.91"
iced = { version = "0.13.1", features = ["async-std", "lazy", "multi-window"] }
rodio = { version = "0.19.0", features = ["symphonia-all"] }
